# idle-game-algorithms

./: pyproject.toml
python/idle-game-algorithms/: pyproject.toml
python/idle-game-algorithms/src/idle_game_algorithms/: generator_initial_cost_initial_revenue_calculator.py  generators_level_costs_and_revenues_calculator.py
python/idle-game-algorithms/src/idle_game_algorithms/calculators/: cost_calculators.py  revenue_calculators.py  time_calculators.py
python/idle-game-algorithms/src/idle_game_algorithms/helpers/: number_helper.py
python/idle-game-algorithms/src/idle_game_algorithms/models/: machine.py  machineLevel.py
python/idle-game-algorithms/tests/calculators/: test_cost_calculators.py  test_revenue_calculators.py
python/tycoon-game-algorithms/: .gitignore
src/tycoon_game_algorithms/: generator-initial-cost-initial-revenue-calculator.py
unity/idle-game-algorithms-tests/: .gitignore
unity/idle-game-algorithms-tests/Assets/Prefabs/UIs/: Canvas.prefab  CountOfMachinesStatusComponent.prefab  MachineComponent.prefab  UI.prefab
unity/idle-game-algorithms-tests/Assets/Scenes/: SampleScene.unity
unity/idle-game-algorithms-tests/Assets/ScriptableObjects/MoneyFormats/: MoneyFormats.asset
unity/idle-game-algorithms-tests/Assets/ScriptableObjects/StageConfigs/: Stage.asset
unity/idle-game-algorithms-tests/Assets/ScriptableObjects/UISettings/: UISettings.asset
unity/idle-game-algorithms-tests/Assets/Scripts/Core/Helpers/: AssetsHelper.cs  MenuItemHelper.cs  UIHelper.cs
unity/idle-game-algorithms-tests/ProjectSettings/: ProjectSettings.asset
(+45 files in other folders)
