[tool.poetry]
name = "idle-game-algorithms"
version = "0.1.0"
description = ""
authors = ["szRR <sezer.tetik2005@gmail.com>"]
readme = "README.md"
packages = [{include = "idle_game_algorithms", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
